public/index.css
* {
    /* We want to style using paddings to keep calculations simpler */
    box-sizing: border-box;
    margin: 0 !important;
}

body {
    margin: 0;
    padding: 0;
    width: 100vw;
    height: 100vh;
    overflow: hidden;
}

img {
    max-width: 300px;
}

.modal {
    /* right now our modal class actually takes up an entire pane */
    padding-top: 40px;
    padding-bottom: 300px;
}

.modal p {
    padding: 10px;
    font-size: 130%;
}

.modal button {
    font-size: 130%;
}

.cancel-red {
    color: red;
}

.ok-green {
    color: green;
}

.button-row {
    display: flex;
    justify-content: space-around;
}

.tab-bar .top button,
.split-pane .left button {
    border: none;
    color: white;
    padding: 5px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
}

.navbar {
    display: inline-flex;
    height: 25px;
    margin-bottom: 5px;
    align-items: flex-end;
    justify-content: space-between;
    width: 100vw;
}

.main > div {
    display: flex;
    flex-direction: column;
    height: calc(100vh - 30px);
}

.main > div > .split-pane {
    flex-grow: 1;
}

.tab-bar {
    display: flex;
    flex-direction: column;
}
.tab-bar .top {
    padding-bottom: 5px;
    height: 40px;
    padding-top: 5px;
}

.tab-bar .top .items {
    display: flex;
    flex-direction: row;
}

.split-pane {
    height: calc(100vh - 30px - 40px);
    display: flex;
    flex-direction: row;
}

.split-pane .left {
    display: flex;
    flex-direction: column;
}

.split-pane .items {
    margin: 5px;
    overflow-y: scroll;
}

.split-pane .items > div {
    padding: 1px;
}

.split-pane .right {
    padding-left: 10px;
    flex-grow: 1;
}

.pm-view {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.message-list {
    height: 90%;
    overflow-y: scroll;
    flex-grow: 1;
    display: flex;
    flex-direction: column-reverse;
}

.compose-box {
    width: 100%;
    display: flex;
    flex-direction: row;
    padding: 5px;
}

.compose-box textarea {
    flex-grow: 1;
}

.layout-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    overflow-x: scroll;
}

.layout-container > div {
    flex-grow: 1;
    flex-basis: 0;
    max-width: 800px;
}

